tests/ui/consts/const-eval/size-of-t.stderr
error: generic parameters may not be used in const operations
  --> $DIR/size-of-t.rs:7:30
   |
LL |     let _arr: [u8; size_of::<T>()];
   |                              ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 1 previous error

